AC_INIT([hermes],[1.0],[florian@margaine.com])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([pam_hermes.c])
AC_CANONICAL_TARGET([])
AM_DISABLE_STATIC
AM_INIT_AUTOMAKE(pam_hermes, 1.0)
AM_MAINTAINER_MODE
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_CONFIG_FILES([Makefile])
AC_SUBST(LTLIBOBJS)
AC_OUTPUT
